--- a/app/views/pages/_left_column.html.erb
+++ b/app/views/pages/_left_column.html.erb
@@ -1,3 +1,3 @@
-<% %W( http://duartememorial.com/images/bikeofthemonth.jpg http://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Juan_pablo_duarte_diez.jpg/446px-Juan_pablo_duarte_diez.jpg http://images.artelista.com/artelista/obras/big/8/8/1/9094257136183751.jpg ).each do |url| %>
+<% %W( http://farm9.staticflickr.com/8034/7976876489_0e3d52869b_m.jpg http://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Juan_pablo_duarte_diez.jpg/446px-Juan_pablo_duarte_diez.jpg http://images.artelista.com/artelista/obras/big/8/8/1/9094257136183751.jpg ).each do |url| %>
 	<%= image_tag	url, :class => "side_image" %>
 <% end %>
