--- a/app/views/pages/inauguracion.html.erb
+++ b/app/views/pages/inauguracion.html.erb
@@ -5,6 +5,6 @@
 
 	
 	<blockquote>
-	<p>Pasaras de la idea de bien a su realizacion</p>
+	<p>Pasarás de la idea de bien a su realización</p>
 	<small>Juan Pablo Duarte</small>
 	</blockquote>
