--- a/app/views/pages/enlaces.html.erb
+++ b/app/views/pages/enlaces.html.erb
@@ -1,5 +1,5 @@
 <div class="hero-unit">
-	<%= link_to image_tag("http://www.vazquezfirm.com/_/rsrc/1306976111655/njbusinesslawyer/Vazquez_LH_Plain%20%281%29.jpg", :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.vazquezfirm.com", :target => "_blank" %>
+	<%= link_to image_tag("http://www.vazquezfirm.com/home/Vazquez_LH_Plain%20%281%29.jpg", :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://constructionlawupdates.com/", :target => "_blank" %>
 	<BR>
 	<%#= link_to "The Vazquez Law Firm" %>
 </div>
