--- a/app/views/pages/enlaces.html.erb
+++ b/app/views/pages/enlaces.html.erb
@@ -1,5 +1,5 @@
 <div class="hero-unit">
-	<%= link_to image_tag("http://www.vazquezfirm.com/home/Vazquez_LH_Plain%20%281%29.jpg", :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://constructionlawupdates.com/", :target => "_blank" %>
-	<BR>
-	<%#= link_to "The Vazquez Law Firm" %>
+	<%= link_to image_tag("http://www.vazquezfirm.com/home/Vazquez_LH_Plain%20%281%29.jpg", width: 210, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://vazquezfirm.com/", :target => "_blank" %>
+	<BR><BR>
+  <%= link_to image_tag("zambrano.jpg", width: 210, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.asa-architecture.com", :target => "_blank" %>
 </div>
