--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,9 +2,7 @@
 <div class="hero-unit">
 	<strong>Estudiantes Dominicanos y amigos,</strong>
 	<BR><BR>
-	La ciudad de Perth Amboy cuenta con un gran número de Dominicanos. El Monumento a Juan Pablo Duarte, fundador de la
-	República Dominicana, hará honra a la historia de este gran prócer, y vinculará  a nuestros jóvenes con nuestra herencia
-	Dominicana motivándolos a cultivar los valores Duartianos.
+	El Monumento a Juan Pablo Duarte, fundador de la República Dominicana, hará honra a la historia de este gran prócer, y vinculará  a nuestros jóvenes con nuestra herencia Dominicana motivándolos a cultivar los valores Duartianos.
 	<BR><BR>
 	Además, este monumento servirá de reconocimiento a los tantos
 	Dominicanos e instituciones Dominicanas, incluyendo a los estudiantes, que han ofrecido y continuarán brindando grandes
@@ -17,7 +15,7 @@
 	<BR><BR>
 	Incluiremos tu nombre en el registro de donantes  y recibirás un pase para asistir al evento de dedicatoria del Monumento!
 </div>
-	
+
 	<blockquote>
 	<p>Seguid, jóvenes amigos, dulce esperanza de la patria mía, seguid con tesón y ardor en la hermosa carrera que habéis emprendido y alcanzad la gloria de dar cima a la grandiosa obra de nuestra regeneración política, de nuestra independencia nacional, única garantía de las libertades patrias</p>
 	<small>Juan Pablo Duarte</small>
