--- a/app/views/pages/inauguracion.html.erb
+++ b/app/views/pages/inauguracion.html.erb
@@ -1,9 +1,9 @@
 <!-- Content -->
 <div class="hero-unit">
-	El Comité  está trabajando arduamente para terminar este memorial lo más pronto posible. Una colaboración significante personal o de su organización puede influenciar el material usado y la rapidez en que se termine la construcción de este monumento.
+	La inauguración del Memorial tomará lugar en el 2014. Muy pronto tendremos más información al respecto.
 </div>
 
-	
+
 	<blockquote>
 	<p>Pasarás de la idea de bien a su realización</p>
 	<small>Juan Pablo Duarte</small>
