--- a/app/views/pages/directiva.html.erb
+++ b/app/views/pages/directiva.html.erb
@@ -2,7 +2,7 @@
 <div class="hero-unit">
 	El Comité Juan Pablo Duarte, (Comité) incorporado bajo Perth Amboy Juan Pablo Duarte Comité, una entidad sin fines de lucro 501c(3), está compuesto de varios negociantes y residentes de respeto en la comunidad.
 	<BR><BR>
-	El Comité ha contratado los servicios de la compania de arquitectura ASA+Zambrano, la cual, en conjunto con los directivos del Comité, diseñó el dibujo del Monumento. Este firma donará gran parte de su trabajo.
+	El Comité ha contratado los servicios de la empresa de arquitectura ASA+Zambrano, la cual, en conjunto con los directivos del Comité, diseñó el dibujo del Monumento. Este firma donará gran parte de su trabajo.
 	<BR><BR>
 	El Comité sigue reglas y prácticas estrictas que aseguran un control interno y una transparencia total de los depósitos y pagos relacionados a las donaciones y actividades de recaudación de fondos. Entre otras, estas incluyen, segregación de funciones que pudieran crean conflictos de intereses, requerimiento de dos firmas autorizadas para aprobar transacciones incluyendo cheques y contratos, exigencia de documentación para depósitos y reportes financieros.
 </div>
