--- a/app/views/pages/enlaces.html.erb
+++ b/app/views/pages/enlaces.html.erb
@@ -6,4 +6,6 @@
   <%= link_to image_tag("buckeye.png", width: 210, :class => "img-polaroid", :style => "padding-top: 75px; padding-bottom: 75px; border: 1px solid #CCC"), "buckeye.com", :target => "_blank" %>
 	<BR><BR>
   <%= link_to image_tag("zambrano.jpg", width: 210, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.asa-architecture.com", :target => "_blank" %>
+	<BR><BR>
+  <%= link_to image_tag("shoprite.jpg", width: 210, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.shoprite.com/pd/stores/NJ/Perth-Amboy/ShopRite-of-Perth-Amboy/6EBE716", :target => "_blank" %>
 </div>
