--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jpd</title>
+  <title>Juan Pablo Duarte Memorial - Perth Amboy, NJ</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -19,11 +19,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="span9">
-				
+
 				<!-- Title -->
 				<%= image_tag "header.png" %>
 				<%= render "navigation" %>
-				
+
 				<div class="row">
 					<div class="span3">
 						<%= render "left_column" %>
@@ -34,8 +34,8 @@
 					</div>
 				</div>
 				<div class="footer">Monumento Juan Pablo Duarte</div>
-			
-			
+
+
 			</div>
 		</div>
 	</div>
