--- a/app/views/pages/inauguracion.html.erb
+++ b/app/views/pages/inauguracion.html.erb
@@ -1,6 +1,10 @@
 <!-- Content -->
 <div class="hero-unit">
-	La inauguración del Memorial tomará lugar en el 2014. Muy pronto tendremos más información al respecto.
+	La inauguración del Memorial tomará lugar el 27 de septiembre del 2014. Contamos con tu presencia.
+	<BR>
+	<BR>
+	Para obtener más información, consulte nuestra
+	<%= link_to "página de eventos", eventos_path %>
 </div>
 
 
