--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,12 +8,10 @@
 	Dominicanos e instituciones Dominicanas, incluyendo a los estudiantes, que han ofrecido y continuarán brindando grandes
 	contribuciones a los Estados Unidos y al mundo.
 	<BR><BR>
-	Te invitamos a ser parte de la historia del Dominicano en los Estados Unidos colaborando con $20 o más para este memorial.
+	Te invitamos a ser parte de la historia del Dominicano en los Estados Unidos colaborando con $20 o más para este memorial. Incluiremos tu nombre en el registro de donantes.
 	<BR><BR>
 	Por favor invita a tus amigos a hacer lo mismo y haremos una cadena de fuerza que hará la diferencia.   Pasa la voz a
-	organizaciones Dominicanas y  a tus amigos de Facebook, Twitter, MySpace, etc.
-	<BR><BR>
-	Incluiremos tu nombre en el registro de donantes  y recibirás un pase para asistir al evento de dedicatoria del Monumento!
+	organizaciones Dominicanas y  a tus amigos de Facebook, Twitter, Instagram, etc.
 </div>
 
 	<blockquote>
