--- a/app/views/pages/enlaces.html.erb
+++ b/app/views/pages/enlaces.html.erb
@@ -1,11 +1,24 @@
 <div class="hero-unit">
-	<%= link_to image_tag("http://www.vazquezfirm.com/home/Vazquez_LH_Plain%20%281%29.jpg", width: 210, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.vazquezfirm.com/", :target => "_blank" %>
+  <%= link_to image_tag("cornucopia.png", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://cornucopiacruise.com", :target => "_blank" %>
 	<BR><BR>
-  <%= link_to image_tag("cibao.jpg", width: 210, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "cibaomeat.com", :target => "_blank" %>
+  <%= link_to image_tag("verizon.jpg", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://verizon.com", :target => "_blank" %>
 	<BR><BR>
-  <%= link_to image_tag("buckeye.png", width: 210, :class => "img-polaroid", :style => "padding-top: 75px; padding-bottom: 75px; border: 1px solid #CCC"), "buckeye.com", :target => "_blank" %>
+  <%= link_to image_tag("cibao.jpg", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://cibaomeat.com", :target => "_blank" %>
 	<BR><BR>
-  <%= link_to image_tag("zambrano.jpg", width: 210, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.asa-architecture.com", :target => "_blank" %>
+  <%= link_to image_tag("buckeye.png", width: 340, :class => "img-polaroid", :style => "padding-top: 75px; padding-bottom: 75px; border: 1px solid #CCC"), "http://buckeye.com", :target => "_blank" %>
+  <BR><BR>
+  <%= link_to image_tag("shoprite.jpg", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.shoprite.com/pd/stores/NJ/Perth-Amboy/ShopRite-of-Perth-Amboy/6EBE716", :target => "_blank" %>
 	<BR><BR>
-  <%= link_to image_tag("shoprite.jpg", width: 210, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.shoprite.com/pd/stores/NJ/Perth-Amboy/ShopRite-of-Perth-Amboy/6EBE716", :target => "_blank" %>
+	<%= link_to image_tag("http://www.vazquezfirm.com/home/Vazquez_LH_Plain%20%281%29.jpg", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.vazquezfirm.com/", :target => "_blank" %>
+	<BR><BR>
+  <%= link_to image_tag("zambrano.jpg", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.asa-architecture.com", :target => "_blank" %>
+	<BR><BR>
+  <%= link_to image_tag("mamitas.png", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://mamitasices.com", :target => "_blank" %>
+	<BR><BR>
+  <%= link_to image_tag("bonao.png", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.yelp.com/biz/bonao-restaurant-perth-amboy", :target => "_blank" %>
+	<BR><BR>
+  <%= link_to image_tag("guillen.png", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://health.usnews.com/doctors/gregorio-guillen-8526", :target => "_blank" %>
+	<BR><BR>
+  <%= link_to image_tag("alis.png", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://www.alisliquorwarehouse.com", :target => "_blank" %>
+	<BR><BR>
 </div>
