--- a/app/views/pages/enlaces.html.erb
+++ b/app/views/pages/enlaces.html.erb
@@ -1,7 +1,7 @@
 <div class="hero-unit">
   <%= link_to image_tag("cornucopia.png", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://cornucopiacruise.com", :target => "_blank" %>
 	<BR><BR>
-  <%= link_to image_tag("verizon.jpg", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://verizon.com", :target => "_blank" %>
+  <%= link_to image_tag("verizon.png", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://verizon.com", :target => "_blank" %>
 	<BR><BR>
   <%= link_to image_tag("cibao.jpg", width: 340, :class => "img-polaroid", :style => "border: 1px solid #CCC"), "http://cibaomeat.com", :target => "_blank" %>
 	<BR><BR>
