--- a/app/views/pages/donacion.html.erb
+++ b/app/views/pages/donacion.html.erb
@@ -1,20 +1,6 @@
 <!-- Content -->
 <div class="hero-unit">
-	De una forma fácil y segura, puede contribuir usando su tarjeta de crédito presionando "Donate" arriba.
-	<BR><BR>
-		Puede también enviar su donación por correo enviando su cheque o "money order" remitido a “Perth Amboy Juan Pablo Duarte Committee” a la dirección siguiente:
-	<BR><BR>
-	<strong>
-	PERTH AMBOY JUAN PABLO DUARTE COMMITTEE<BR>
-	P.O. BOX 2621<BR>
-	PERTH AMBOY, NEW JERSEY 08862
-	</strong>
-	<BR><BR>
-	Usted o la institución que usted representa puede ser parte de este importante símbolo patrio Dominicano.  No deje pasar esta oportunidad de aportar un grano de arena para un legado histórico bello e importante.  Contamos con su máxima colaboración. Recibe nuestras gracias anticipadamente.
-	<BR><BR>
-	Hasta el presente, el Comité ha recaudado aproximadamente $61,000.00.
-	<BR><BR>
-	<span style="color: #FF0000">!NECESITAMOS TU AYUDA!</span>
+El Comité Juan Pablo Duarte manifiesta las más expresivas gracias a todos los que hicieron el Monumento a Juan Pablo Duarte una realidad.  En especial a la Honorable Alcaldesa, Wilda Diaz, porque sin su apoyo no hubiese sido posible esta obra y al honorable alcalde Brian Stack por su donación del busto que ahora es parte del Monumento. A los concejales presentes y anteriores que dieron su voto de apoyo.  A los ingenieros de la compañía Feist Engineering. A los arquitectos ASA+Zambranos quienes, en unión con el Comité, diseñaron el Monumento. A la firma de Contabilidad CSI Tax Group, A la firma de abogados Vazques Law Firm. A la compañía manufacturera del Monumento, Marveleous Marble Design. A la compañía instaladora del Monumento, Holland Construction. A Celebrate Perth Amboy por falilitarnos su organización cuando el Comité no contaba con su  entidad propia. A los negocios que, ya sea en una, o en múltiples ocasiones, donaron o auspiciaron nuestros eventos de recaudación de fondos. A todas las personas quienes con su trabajo, sus donaciones o con su participación en estos eventos nos apoyaron. A todos, muchas gracias.
 </div>
 
 	<blockquote>
