--- a/app/views/pages/eventos.html.erb
+++ b/app/views/pages/eventos.html.erb
@@ -1,65 +1,6 @@
 <!-- Content -->
 <div class="hero-unit">
-	<b>CEREMONIA INAUGURAL</b>
-	<BR><BR>
-	SÁBADO, 27 DE SEPTIEMBRE, 2014 - 3:00PM
-	<BR>
-	________________________________________
-	<BR><BR>
-		Esquina High St. y Sadowski Parkway, Perth Amboy.<BR>Abierto al público.
-</div>
-<div class="hero-unit">
-	<b>RECEPCIÓN DE GALA VIP</b>
-	<BR><BR>
-	SÁBADO, 27 DE SEPTIEMBRE, 2014 - 6:30PM
-	<BR>
-	________________________________________
-	<BR><BR>
-		Cornucopia Riverfront Station, 401 Riverview Drive, Perth Amboy
-	<BR>
-	<i>
-		<BR>
-		$175 por persona para Recepcion VIP + Cena De Gala
-		<BR>
-		$125 por persona para Cena De Gala
-		<BR>
-		Remita cheque a: Perth Amboy JPD Committee
-		<BR>
-		Envie a: P.O. Box 2621, Perth Amboy, NJ 08862
-	</i>
-</div>
-<div class="hero-unit">
-	<b>CENA DE GALA</b>
-	<BR><BR>
-	SÁBADO, 27 DE SEPTIEMBRE, 2014 - 8:00PM
-	<BR>
-	________________________________________
-	<BR><BR>
-		Cornucopia Riverfront Station - 401 Riverview Drive, Perth Amboy
-	<BR>
-	<i>
-		<BR>
-		$175 por persona para Recepcion VIP + Cena De Gala
-		<BR>
-		$125 por persona para Cena De Gala
-		<BR>
-		Remita cheque a: Perth Amboy JPD Committee
-		<BR>
-		Envie a: P.O. Box 2621, Perth Amboy, NJ 08862
-	</i>
-</div>
-<h1>Eventos Previos</h1>
-<div class="hero-unit">
-	<b>EL PRIMER PICAZO DEL MONUMENTO A JUAN PABLO DUARTE</b>
-	<BR><BR>
-	SÁBADO, JULIO 28, 2012 - 3:00PM
-	<BR>
-	________________________________________
-	<BR><BR>
-		Esquina High St. y Sadowski Parkway, Perth Amboy.
-		<BR>
-		<BR>
-		La comunidad de Perth Amboy ha organizado varios eventos pro recaudación de fondos para el memorial a Juan Pablo Duarte. Damos las gracias a los auspiciadores y a todos los que de una forma u otra han colaborado con estos eventos.
+	La comunidad de Perth Amboy organizó <%= link_to "varios eventos", inauguracion_path %> pro recaudación de fondos para el memorial a Juan Pablo Duarte. Damos las gracias a los auspiciadores y a todos los que de una forma u otra han colaborado con estos eventos.
 </div>
 
 	<blockquote>
