--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,17 +1,20 @@
 <!-- Content -->
 <div class="hero-unit">
-	<strong>Estudiantes Dominicanos y amigos,</strong>
-	<BR><BR>
-	El Monumento a Juan Pablo Duarte, fundador de la República Dominicana, hará honra a la historia de este gran prócer, y vinculará  a nuestros jóvenes con nuestra herencia Dominicana motivándolos a cultivar los valores Duartianos.
-	<BR><BR>
-	Además, este monumento servirá de reconocimiento a los tantos
-	Dominicanos e instituciones Dominicanas, incluyendo a los estudiantes, que han ofrecido y continuarán brindando grandes
-	contribuciones a los Estados Unidos y al mundo.
-	<BR><BR>
-	Te invitamos a ser parte de la historia del Dominicano en los Estados Unidos colaborando con $20 o más para este memorial. Incluiremos tu nombre en el registro de donantes.
-	<BR><BR>
-	Por favor invita a tus amigos a hacer lo mismo y haremos una cadena de fuerza que hará la diferencia.   Pasa la voz a
-	organizaciones Dominicanas y  a tus amigos de Facebook, Twitter, Instagram, etc.
+<BR><BR>
+El Sábado Septiembre 27, 2014 la ciudad de Perth Amboy aceptó el obsequio de un monumento a Juan Pablo Duarte de parte de la comunidad dominicana. Numerosas personas se reunieron en el bello malecón de Perth Amboy para presenciar este histórico evento. Fue una ceremonia extraordinaria en medio de una tarde con un sol resplandeciente.  La banda musical  del Sistema Escolar de la ciudad acompañó los himnos nacionales, hubo además poemas, interpretaciones musicales de niños y de adultos, una reseña histórica por el historiador Jesús Méndez Jiminián al igual que música y bailes folclóricos entre otras cosas. El Monseñor  John Gordon, párroco  de la Parroquia Santo Nombre de Jesús condujo la invocatoria. La música fue dirigida por el Maestro Víctor Quezada. Entre los asistentes se encontraron el Hon. Asambleísta estatal Craig Coughlin, la Hon. Alcaldesa de Perth Amboy Wilda Diaz,  los Consejales Joel Pabon, Fernando Irrizari, Lisa Nanton y  William Petrick. Los maestros de ceremonia fueron Damaris Díaz y Freddy Pérez.
+<BR><BR>
+Las festividades inaugurales iniciaron el 21 de Septiembre con el oficio de una Santa Misa en honor al Patricio Juan Pablo Duarte en la Parroquia Santo Nombre de Jesús por el sacerdote Nicolás Ureña. El Viernes 26 de Septiembre, con la coordinación de la Profesora Sarah Aponte, representando al Instituto de Estudios Dominicano de CUNY,y la participación de la renombrada poetiza y escritora Rhina Espaillat y los jóvenes traductores Antonio Pérez y Nelson Santana, El Comité Juan Pablo Duarte organizó una presentación sobre los escritos de Juan Pablo Duarte y la traducción de éstos al inglés.
+<BR><BR>
+La jornada de eventos inaugurales culminó con una extraordinaria fiesta de gala con el legendario Joseito Mateo y la orquesta del Maestro Víctor Quezada. Durante este evento el orador principal fue el historiador Alfonso Torres Ulloa. El Comité Juan Pablo Duarte entregó una placa de reconocimiento a la Hon. Alcaldesa Wilda Diaz por sus esfuerzos de apoyo con el Monumento.
+Juan Pablo Duarte nació el 26 de Enero del 1813 y murió el 15 de Julio de 1876.  Además de ser el fundador de la Republica Dominicana, Juan Pablo Duarte dejo un legado importante al mundo. Su honestidad, fe, desprendimiento personal, entrega al servicio, patriotismo y su pasión por la educación, unidad y justicia, desde una temprana edad, hacen de él un modelo inspirador para todos y en especial para los jóvenes.  Vivió en los estados Unidos, Europa y Venezuela; hablaba seis idiomas.
+<BR><BR>
+En el 2007, la ciudad de Union City bajo el liderazgo del Hon. Brian Stack donó un busto de Juan Pablo Duarte a la ciudad de Perth Amboy. La administración de la Ciudad de Perth Amboy en aquel entonces recibió el busto y prosiguió a seleccionar una localización permanente para éste. La ciudad entonces condujo una encuesta entre un grupo de dominicanos residentes en Perth Amboy  para determinar su mejor localización.  Abrumadoramente, la opción de mayor aceptación fue el parque Caledonia/Roessler localizado muy cerca al malecón de Perth Amboy.
+<BR><BR>
+En el 2008, la ciudad de Perth Amboy renombró el parque escogido para la localización del busto. Por consiguiente, el nuevo nombre de este parque es Caledonia/Roessler/Honorary Juan Pablo Duarte. Fue en este contexto que un grupo de dominicanos de la Ciudad formaron un comité para  asegurar que el Busto sea instalado adecuadamente en este parque. El Comité Juan Pablo Duarte entonces emprendió la tarea de recaudar fondos, en los negocios locales y residentes de la ciudad con el propósito de erigir un monumento en donde instalar el Busto. Después de grandes esfuerzos, se aprobó la localización del Monumento a Juan Pablo Duarte.
+<BR><BR>
+Fue en aquel entonces y sigue siendo el anhelo del Comité que el Monumento a Juan Pablo Duarte manifieste a la Comunidad que abrazamos las herencias multiculturales.  Es también nuestra meta que este monumento sea un símbolo no solamente por representar una figura importante en la herencia dominicana, sino además que represente los grandes valores universales que poseía Juan Pablo Duarte, los cuales pueden ser emulados por cada miembro de nuestra sociedad y muy especialmente por los jóvenes.
+<BR><BR>
+El Monumento a Juan Pablo Duarte es una muestra a los residentes y visitantes que Perth Amboy es y será siempre una ciudad de visitantes, ya que han sido los inmigrantes que nos han dado su gran historia, ponen en alto el presente y moldean el futuro de nuestra ciudad.
 </div>
 
 	<blockquote>
