--- a/app/views/pages/directiva.html.erb
+++ b/app/views/pages/directiva.html.erb
@@ -1,10 +1,13 @@
 <!-- Content -->
 <div class="hero-unit">
-	El Comité Juan Pablo Duarte, (Comité) incorporado bajo Perth Amboy Juan Pablo Duarte Comité, una entidad sin fines de lucro 501c(3), está compuesto de varios negociantes y residentes de respeto en la comunidad.
-	<BR><BR>
-	El Comité ha contratado los servicios de la empresa de arquitectura ASA+Zambrano, la cual, en conjunto con los directivos del Comité, diseñó el dibujo del Monumento. Este firma donará gran parte de su trabajo.
-	<BR><BR>
-	El Comité sigue reglas y prácticas estrictas que aseguran un control interno y una transparencia total de los depósitos y pagos relacionados a las donaciones y actividades de recaudación de fondos. Entre otras, estas incluyen, segregación de funciones que pudieran crean conflictos de intereses, requerimiento de dos firmas autorizadas para aprobar transacciones incluyendo cheques y contratos, exigencia de documentación para depósitos y reportes financieros.
+El Comité Juan Pablo Duarte, (Comité) incorporado bajo Perth Amboy Juan Pablo Duarte Comité, una entidad sin fines de lucro 501c(3), está compuesto de varios negociantes y residentes de respeto en la comunidad.  Esta entidad fue establecida con el propósito de construir el Monumento a Juan Pablo Duarte y de esa manera fomentar sus valores. Les queremos asegurar que el Comité ha mantenido prácticas estrictas para asegurar un control interno y una transparencia total de todas sus transacciones  y actividades. Además, les informamos que, tan pronto sea prudente, el balance restante en la cuenta bancaria de nuestra entidad será donado para la reparación de la biblioteca pública de Perth Amboy y la cuenta será cerrada.
+<BR><BR>
+Ha sido un honor el haber trabajado para esta causa y les damos las reiteradas gracias.
+<BR><BR>
+Muy cordialmente,
+<BR><BR>
+La Directiva del Comité Juan Pablo Duarte
+
 </div>
 <blockquote>
 	<p>Sed Justos lo primero, si queréis ser felices.  Ese es el primer deber del hombre; y ser unidos así apagareis la tea de la discordia y venceréis a vuestros enemigos y la patria será libre y salva.  Yo obtendré la mayor recompensa, la única a que aspiro, al veros libres, felices, independientes y tranquilos</p>
