--- a/app/views/pages/inauguracion.html.erb
+++ b/app/views/pages/inauguracion.html.erb
@@ -1,10 +1,44 @@
 <!-- Content -->
 <div class="hero-unit">
-	La inauguración del Memorial tomará lugar el 27 de septiembre del 2014. Contamos con tu presencia.
+	<b>CEREMONIA INAUGURAL</b>
+	<BR><BR>
+	SÁBADO, 27 DE SEPTIEMBRE, 2014 - 3:00PM
 	<BR>
+	________________________________________
+	<BR><BR>
+		Esquina High St. y Sadowski Parkway, Perth Amboy.<BR>Abierto al público.
+</div>
+<div class="hero-unit">
+	<b>RECEPCIÓN DE GALA VIP</b>
+	<BR><BR>
+	SÁBADO, 27 DE SEPTIEMBRE, 2014 - 6:30PM
 	<BR>
-	Para obtener más información, consulte nuestra
-	<%= link_to "página de eventos", eventos_path %>
+	________________________________________
+	<BR><BR>
+		Cornucopia Riverfront Station, 401 Riverview Drive, Perth Amboy
+	<BR>
+</div>
+<div class="hero-unit">
+	<b>CENA DE GALA</b>
+	<BR><BR>
+	SÁBADO, 27 DE SEPTIEMBRE, 2014 - 8:00PM
+	<BR>
+	________________________________________
+	<BR><BR>
+		Cornucopia Riverfront Station - 401 Riverview Drive, Perth Amboy
+	<BR>
+</div>
+<h1>Eventos Previos</h1>
+<div class="hero-unit">
+	<b>EL PRIMER PICAZO DEL MONUMENTO A JUAN PABLO DUARTE</b>
+	<BR><BR>
+	SÁBADO, JULIO 28, 2012 - 3:00PM
+	<BR>
+	________________________________________
+	<BR><BR>
+		Esquina High St. y Sadowski Parkway, Perth Amboy.
+		<BR>
+		<BR>
 </div>
 
 
