--- a/app/views/pages/eventos.html.erb
+++ b/app/views/pages/eventos.html.erb
@@ -1,6 +1,6 @@
 <!-- Content -->
 <div class="hero-unit">
-	La comunidad de Perth Amboy organizó <%= link_to "varios eventos", inauguracion_path %> pro recaudación de fondos para el memorial a Juan Pablo Duarte. Damos las gracias a los auspiciadores y a todos los que de una forma u otra han colaborado con estos eventos.
+	La comunidad de Perth Amboy organizó <%= link_to "varios eventos", inauguracion_path %> pro recaudación de fondos para el memorial a Juan Pablo Duarte. Damos las gracias a los auspiciadores y a todos los que de una forma u otra colaboraron con estos eventos.
 </div>
 
 	<blockquote>
