--- a/app/views/pages/_title.html.erb
+++ b/app/views/pages/_title.html.erb
@@ -1,5 +1,5 @@
 <div class="donate">
 	<p class="text-info">
-		Monumento a Juan Pablo Duarte (High St. y Sadowski Parkway) Perth Amboy, New Jersey
+		Monumento a Juan Pablo Duarte - High St. y Sadowski Parkway, Perth Amboy, New Jersey
 	</p>
 </div>
